# NLP_SMS_Spam_Detector

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: export_onnx.py  main.py  requirements.txt
frontend/: index.html  script.js  style.css
models/: README.txt
