[project]
name = "nlp-sms-spam-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "click==8.4.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "exceptiongroup==1.3.1",
    "fastapi==0.137.2",
    "filelock==3.29.4",
    "flatbuffers==25.12.19",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.20.1",
    "humanfriendly==10.0",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "numpy==2.2.6",
    "onnxruntime==1.23.2",
    "packaging==26.2",
    "protobuf==7.35.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyreadline3==3.5.6",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "shellingham==1.5.4",
    "starlette==1.3.1",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn>=0.49.0",
]